# coinex_exchange_api

./: .gitignore  README.md
csharp/: CoinEx.cs  Program.cs
golang/: demo.go
java/src/com/CoinEx/stock/rest/: CoinExHttpDelete.java  CoinExTest.java  HttpUtilManager.java  MD5Util.java  StockApi.java  StringUtil.java
nodejs/: demo.js  package.json
php/: README.md
python2.7/: demo.py
python3.8/: websocket.py
qt/: CMakeLists.txt  coinexapi.cpp  coinexapi.h  main.cpp
